# superlocalmemory

./: .gitignore  .npmignore  ACCEPTANCE.md  AGENTS.md  ATTRIBUTION.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LOCALIZE.md  Makefile  README.md  SECURITY.md  SETUP_FOR_AGENTS.md  SKILL.md  api_server.py  build-dmg.sh  conftest.py  install-skills.ps1  install.ps1  install.sh  mcp_server.py  ope-acceptance.py  package-lock.json  package.json  pyproject.toml  requirements-core.txt  requirements-full.txt  requirements-learning.txt  requirements-search.txt  requirements-ui.txt  requirements.txt  security_middleware.py  start-dashboard.ps1  start-dashboard.sh  sync-wiki.ps1  test-npm-package.ps1  ui_server.py  verify-install.ps1  (+1 more)
.claude-plugin/: marketplace.json  plugin.json
.pytest_tmp_data/: config.json
assets/: CONTACT-SHEET-README.md  README.md
codex-plugin/: AGENTS.md  README.md  _GENERATED.md
configs/: continue-skills.yaml
copilot-plugin/: README.md  _GENERATED.md
docs/: ARCHITECTURE.md  CLI-COMMANDS-REFERENCE.md  DASHBOARD-COVERAGE.md  FRAMEWORK-INTEGRATIONS.md  SECURITY-encryption-at-rest.md  UNIVERSAL-INTEGRATION.md  api-reference.md  auth-write-gate.md  auto-memory.md  benchmarks.md  cli-reference.md  cloud-backup.md  compliance.md  configuration.md  deployment-tiers.md  distributed-deployment.md  framework-adapters.md  getting-started.md  ide-setup.md  install-linux.md  install-macos-dmg.md  mcp-tools.md  migration-from-v2.md  multi-machine.md  optimize-cli.md  optimize-config.md  optimize-overview.md  optimize-per-agent.md  pi-dev-integration.md  privacy-diagnostics.md  profiles.md  proxy-setup.md  rbac-teams.md  retrieval-score-contract.md  scale-engine.md  shared-memory.md  troubleshooting.md
examples/: langchain_example.py  llamaindex_example.py
ide/: integration-compatibility-evidence.json  integration-contracts.json
ide/integrations/agent-framework/: README.md  pyproject.toml
ide/integrations/agent-framework/agent_framework_superlocalmemory/: __init__.py  _v3_message_store.py  providers.py
ide/integrations/agent-framework/tests/: conftest.py  test_message_store.py  test_providers.py
ide/integrations/autogen/: README.md  pyproject.toml
ide/integrations/autogen/autogen_superlocalmemory/: __init__.py  _v3_autogen_store.py  memory.py
ide/integrations/autogen/tests/: conftest.py  test_autogen_store.py  test_memory.py
ide/integrations/google-adk/: README.md  pyproject.toml
ide/integrations/google-adk/google_adk_superlocalmemory/: __init__.py  _v3_adk_store.py  memory_service.py
ide/integrations/google-adk/tests/: conftest.py  test_adk_store.py  test_memory_service.py  test_security.py
ide/integrations/langchain/: README.md  pyproject.toml
ide/integrations/langchain/langchain_superlocalmemory/: _v3_store.py  chat_message_history.py
ide/integrations/langchain/tests/: test_chat_message_history.py  test_security.py
ide/integrations/llamaindex/: README.md  pyproject.toml
ide/integrations/llamaindex/llama_index/storage/chat_store/superlocalmemory/: _v3_store.py  base.py
ide/integrations/llamaindex/tests/: test_chat_store.py  test_security.py
ide/integrations/semantic-kernel/: README.md  pyproject.toml
ide/integrations/semantic-kernel/semantic_kernel_superlocalmemory/: __init__.py  _v3_record_store.py  collection.py
ide/integrations/semantic-kernel/tests/: conftest.py  test_collection.py  test_record_store.py
plugin/: .mcp.json  _GENERATED.md  requirements.txt
plugin-src/: .mcp.json  manifest.json  requirements.txt  settings.json
reference_diag/: full_framework_detailed.puml  poison_attack_eval.py  poison_attack_success_report.txt
scratchpad/: playwright_verify.py
scripts/: _savings_math.py  build-copilot-plugin.mjs  build-dmg.sh  build-plugin.js  build-plugin.mjs  build_entry.py  calibration_report.py  claim_scanner.py  dmg_release.py  dogfood_savings.py  generate-thumbnails.py  install-skills.ps1  install-skills.sh  install.ps1  install.sh  integration_compatibility.py  postinstall-interactive.js  postinstall.js  prepack.js  preuninstall.js  release_evidence.py  release_manifest.py  release_registry_guard.py  run-ui-tests.mjs  sync-wiki.sh  test-dmg.sh  test-npm-package.ps1  test-npm-package.sh  verify-install.ps1  verify-install.sh  verify-v27.ps1  verify-v27.sh
src/: agent_registry.py  auto_backup.py  cache_manager.py  db_connection_manager.py  event_bus.py  hnsw_index.py  memory-profiles.py  memory-reset.py  memory_compression.py  memory_store_v2.py  migrate_v1_to_v2.py  provenance_tracker.py  qualixar_attribution.py  setup_validator.py  subscription_manager.py  webhook_dispatcher.py
tests/: conftest.py  test-system.ps1  test_backward_compat_v28_part1.py  test_backward_compat_v28_part2.py  test_backward_compat_v28_part3.py  test_backward_compat_v28_part4.py  test_backward_compat_v28_part5.py  test_backward_compat_v28_part6.py  test_backward_compat_v28_part7.py  test_backward_compat_v28_part8.py  test_before_web_hook.py  test_behavioral_full.py  test_claude_hooks.py  test_cli_core.py  test_cli_v33.py  test_compliance_full.py  test_config_system.py  test_connection_manager_part1.py  test_connection_manager_part2.py  test_connection_manager_part3.py  test_dashboard_preserve_embedding.py  test_edge_cases.py  test_edge_cases_part1.py  test_edge_cases_part2.py  test_edge_cases_part3.py  test_edge_cases_part4.py  test_event_bus.py  test_final_locomo_mini.py  test_graph_integrity.py  test_graph_v265.py  test_hook_handlers.py  test_infra.py  test_injection.py  test_isolation_cycle3.py  test_learning_e2e_part1.py  test_learning_e2e_part2.py  test_learning_e2e_part3.py  test_learning_e2e_part4.py  test_learning_e2e_part5.py  test_learning_e2e_part6.py  (+8 more)
ui/: index.html
wiki-content/: Active-Memory.md  Auto-Memory.md  Bounded-Loops.md  CLI-Reference.md  Capabilities-and-Operations.md  Compliance.md  FAQ.md  Framework-Adapters.md  GDPR-Compliance.md  Getting-Started.md  Home.md  IDE-Setup.md  Installation.md  MCP-Tools.md  Migration-from-V2.md  Modes-Explained.md  Multi-Agent-Memory.md  RBAC-Teams.md  (+7 more)
(+1191 files in other folders)
