[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-superlocalmemory"
version = "0.1.0"
description = "LangChain chat message history backed by a local SuperLocalMemory data root"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Varun Pratap Bhardwaj" },
]
keywords = ["langchain", "memory", "local-first", "privacy", "sqlite", "chat-history", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=1.0.0",
    "superlocalmemory>=3.6.23,<4",
]

[project.urls]
Homepage = "https://github.com/qualixar/superlocalmemory"
Documentation = "https://superlocalmemory.com/"
Repository = "https://github.com/qualixar/superlocalmemory"

[tool.pytest.ini_options]
testpaths = ["tests"]
