[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-storage-chat-store-superlocalmemory"
version = "0.1.0"
description = "LlamaIndex chat store backed by a local SuperLocalMemory data root"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Varun Pratap Bhardwaj" },
]
keywords = ["llamaindex", "llama-index", "memory", "local-first", "privacy", "sqlite", "chat-store", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llama-index-core>=0.13.0,<0.15",
    "superlocalmemory>=3.6.23,<4",
]

[project.urls]
Homepage = "https://github.com/qualixar/superlocalmemory"
Documentation = "https://superlocalmemory.com/"
Repository = "https://github.com/qualixar/superlocalmemory"

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.storage.chat_store.superlocalmemory"

[tool.llamahub.class_authors]
SuperLocalMemoryChatStore = "varun369"

[tool.pytest.ini_options]
testpaths = ["tests"]
